# Stock-App

./: .env.multi-agent.example  .gitignore  DEPLOY.md  README.md  README_MULTI_AGENT.md  orchestration_api.py  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.ts  tsconfig.tsbuildinfo  worker.py  실행방법.md
agents/: service.py
backtesting/: service.py
committee/: __init__.py  service.py
core/: event_bus.py  kafka_consumer.py  models.py  orchestrator.py  policy_engine.py  registry.py  repository.py  settings.py
core/schemas/: backtest_result.schema.json  committee_decision.schema.json  debate_message.schema.json  market_event.schema.json  portfolio_action.schema.json  risk_report.schema.json  signal.schema.json  thesis.schema.json
debate/: service.py
portfolio/: service.py
risk/: service.py
scripts/: dev.sh
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/company/: page.tsx
src/app/guide/: page.tsx
src/app/investors/: page.tsx
src/app/investors-guide/: page.tsx
src/components/: AIPortfolioInsight.tsx  ClientChart.tsx  CommentSection.tsx  Community.tsx  CurrencyTicker.tsx  CustomPeriodButton.tsx  EconomicCalendar.tsx  GlobalSearchBar.tsx  MentorInsight.tsx  MentorPortfolio.tsx  Navbar.tsx  NewsSection.tsx  PortfolioCalculator.tsx  PortfolioChart.tsx  SymbolChart.tsx
src/contexts/: CurrencyContext.tsx
src/hooks/: useMentorEngine.ts  useRealtimeQuotes.ts
src/lib/: dart-financial.ts  marketUniverse.ts  quantEngine.ts  sec-xbrl.ts  storage.ts  symbolAliases.ts  yahoo.ts
src/lib/ai/: types.ts  (+7 more)
(+49 files in other folders)
