[project]
name = "multi-agent-investment-platform"
version = "0.1.0"
description = "Production-grade multi-agent investment analysis platform"
readme = "README_MULTI_AGENT.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "celery[redis]>=5.4.0",
  "aiokafka>=0.10.0",
  "orjson>=3.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
